[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pptagent"
authors = [{ name = "Hao Zheng", email = "wszh712811@gmail.com" }]
description = "An Agentic Framework for Reflective PowerPoint Generation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "presentation",
    "powerpoint",
    "ppt",
    "llm",
    "ai",
    "document-processing",
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiometer",
    "aiofiles",
    "arxiv>=2.2.0",
    "beautifulsoup4",
    "binaryornot>=0.4.4",
    "colorlog>=6.9.0",
    "docker>=7.1.0",
    "fake-useragent>=2.2.0",
    "fastapi[all]",
    "fastmcp>=2.10.0,<2.14.0",
    "fasttext>=0.9.3",
    "filelock>=3.0.0",
    "firecrawl-py>=4.10.2",
    "func_argparse",
    "gradio>=5.47.2,<6.0",
    "html2image",
    "httpx>=0.28.0",
    "httpx-retries>=0.4.5",
    "jinja2>=3.1.6",
    "json-repair>=0.51.0",
    "jsonlines>=4.0.0",
    "kubernetes-asyncio>=33.3.0",
    "langchain_mcp_adapters",
    "lxml",
    "markitdown>=0.0.2",
    "mcp>=1.14.0",
    "mistune>=3.1.4",
    "numpy<2.0.0",
    "oaib",
    "openai>=1.108.2",
    "opencv-python-headless",
    "openpyxl",
    "pdf2image",
    "pillow",
    "playwright>=1.55.0",
    "pptagent-pptx>=0.0.1",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.9",
    "pypdf>=6.1.1",
    "python-dotenv>=1.0.0",
    "python-Levenshtein",
    "python-multipart",
    "python-pptx>=0.6.21",
    "PyYAML",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "rich>=13.0.0",
    "semanticscholar>=0.11.0",
    "socksio",
    "tavily-python>=0.7.14",
    "tenacity",
    "trafilatura>=2.0.0",
    "typer>=0.9.0",
    "uvicorn",
    "modelscope>=1.35.1",
]

[project.optional-dependencies]
full = [
    "transformers<4.50.0",
    "fasttext",
    "einops",
    "peft",
    "huggingface_hub",
    "timm",
    "unoserver",
]

[project.urls]
"Homepage" = "https://github.com/icip-cas/PPTAgent"
"Bug Tracker" = "https://github.com/icip-cas/PPTAgent/issues"

[project.scripts]
pptagent = "deeppresenter.cli:main"
pptagent-mcp = "pptagent.mcp_server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pptagent*", "deeppresenter*"]
exclude = ["*.test", "*.test.*", "test.*", "test", "sarl*", "data*", "harness*"]

[tool.setuptools.package-data]
"pptagent" = [
    "prompts/*.txt",
    "prompts/**/*.txt",
    "roles/*.yaml",
    "resource/*.png",
    "templates/**/*.txt",
    "templates/**/*.json",
    "templates/**/*.pptx",
]
"deeppresenter" = [
    "roles/*.yaml",
    "html2pptx/*.js",
    "html2pptx/package.json",
    "config.yaml.example",
    "mcp.json.example",
    "serve.sh",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "llm: mark test as using LLM (requires OPENAI_API_KEY)",
    "parse: mark test as using minerU API",
    "asyncio: mark test as using asyncio",
]

[tool.ruff.lint]
ignore = ["F403", "F405", "E741", "E722"]

[tool.setuptools.dynamic]
version = { attr = "deeppresenter.__version__" }
